- New script: Generate object JSON data from vanilla game or DAT object
- New script: Recolor any compatible PNG files with recolorable color 1
- New script: Zip all object files in the repo
- New script: Zip and install all parkobj files in the repo
- New object: Palm Tree (rct2.scenery_small.tpm)
- New object: Tree (rct2.scenery_small.tropt1)
- New object: Base Block (toontowner.scenery_small.xxbbbr01)
- New object: Roof (rct2.scenery_small.roof5)
- New object: Roof (rct2.scenery_small.roof7)
- New object: Sphinx (rct2.scenery_large.sspx)
- New object: Pyramid (rct2.scenery_large.spyr)
- New object: Flower (rct2.scenery_small.tjf)
- New object: Wooden Post Wall (couger.scenery_wall.acwwf32)
- New object: Wooden Post Wall (couger.scenery_wall.acww33)
- New object: Dinosaur (rct2.scenery_large.sdn1)
- New object: Dinosaur (rct2.scenery_large.sdn2)
- New object: Dinosaur (rct2.scenery_large.sdn3)
- New object: Toadstool (rct2.scenery_small.tst1)
- New object: Toadstool (rct2.scenery_small.tst2)
- New object: Toadstool (rct2.scenery_small.tst3)
- New object: Toadstool (rct2.scenery_small.tst4)
- New object: Toadstool (rct2.scenery_small.tst5)
- New object: Roof (toontowner.scenery_small.ttrfwd01)
- New object: Roof (toontowner.scenery_small.ttrfwd02)
- New object: Roof (toontowner.scenery_small.ttrfwd03)
- New object: Roof (toontowner.scenery_small.ttrfwd04)
- New object: Roof (toontowner.scenery_small.ttrfwd06)
- New object: Roof (toontowner.scenery_small.ttrfwd07)
- New object: Roof (toontowner.scenery_small.ttrfwd08)
- New object: Roof (toontowner.scenery_small.ttpirf02)
- New object: Roof (toontowner.scenery_small.ttpirf03)
- New object: Roof (toontowner.scenery_small.ttpirf04)
- New object: Roof (toontowner.scenery_small.ttpirf07)
- New object: Roof (toontowner.scenery_small.ttpirf08)
- New object: Vine Tree (rct2ww.scenery_small.1x1atre2)
- New object: Cactus (rct2ww.scenery_small.sbh3cac1)
- New object: Cactus (rct2ww.scenery_small.sbh3cac2)