@@ -1,7 +1,7 @@
 {
     "id": "fidwell.scenery_group.gardens_dkso",
     "authors": ["fidwell"],
-    "version": "2.0",
+    "version": "3.0",
     "originalId": "0C58B507|TABGARDE|7A291EA2",
     "sourceGame": "custom",
     "objectType": "scenery_group",
@@ -42,6 +42,7 @@
             "rct2.scenery_small.tg18",
             "$DAT:09F55801|MG-RCT65",
             "rct2.scenery_small.tg19",
+            "fidwell.scenery_small.tg19",
             "rct2.scenery_small.tg20",
             "rct2.scenery_small.tg21",
             "$DAT:0C58B401|IRETG21C"
