@@ -1,0 +1,56 @@
+{
+    "id": "fidwell.scenery_small.tg19",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 4,
+        "removalPrice": 1,
+        "cursor": "CURSOR_FLOWER_DOWN",
+        "height": 8,
+        "shape": "1/4",
+        "requiresFlatSurface": true,
+        "canWither": true,
+        "canBeWatered": true,
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true,
+        "isStackable": true
+    },
+    "images": [
+      { "path": "images/00.png", "x": -16, "y": -13 },
+      { "path": "images/01.png", "x": -16, "y": -13 },
+      { "path": "images/02.png", "x": -16, "y": -13 },
+      { "path": "images/03.png", "x": -16, "y": -13 },
+      { "path": "images/04.png", "x": -16, "y": -13 },
+      { "path": "images/05.png", "x": -16, "y": -13 },
+      { "path": "images/06.png", "x": -16, "y": -13 },
+      { "path": "images/07.png", "x": -16, "y": -13 },
+      { "path": "images/08.png", "x": -16, "y": -10 },
+      { "path": "images/09.png", "x": -16, "y": -10 },
+      { "path": "images/10.png", "x": -16, "y": -10 },
+      { "path": "images/11.png", "x": -16, "y": -10 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Gardens",
+            "fr-FR": "Jardins",
+            "de-DE": "Beete",
+            "es-ES": "Jardines",
+            "it-IT": "Giardini",
+            "nl-NL": "Bloemen",
+            "sv-SE": "Rabatter",
+            "ko-KR": "꽃",
+            "zh-CN": "花园",
+            "zh-TW": "花園",
+            "pt-BR": "Jardins",
+            "cs-CZ": "Zahrady",
+            "ja-JP": "花壇",
+            "pl-PL": "Klomb",
+            "ru-RU": "Клумба",
+            "eo-ZZ": "Ĝardenoj",
+            "ca-ES": "Jardins",
+            "fi-FI": "Kukkapenkki"
+        }
+    }
+}
